add busniess logic
